# roblox-lua-obscator

./: .gitignore  Anime ball  Anime ball fully dumped  Anime ball remote dump  AnimeBall_Hub.lua  AnimeBall_Loader.lua  AutoDraw_Claude.lua  BladeBall_AutoParry.lua  BladeBall_AutoParry_Load.lua  BladeBall_Hub.lua  ChatForce_Client.lua  ChatForce_Server.lua  Chat_SS_Combined.lua  Claude_Hub.lua  Claude_Hub_Lite.lua  Claude_Hub_protected.lua  Claude_Loader.lua  Clyde_Hub.lua  Codespce  Crystal_Hub.lua  DodgeOrDie.lua  FE_Hub.lua  ForceChat.lua  Full_Combined.lua  Full_Combined_source.lua  Full_Script.txt  GameCodeDumper.lua  GameFinder.lua  GameFullDumper.lua  Grow_A_Garden_2.lua  KeyBypass.lua  KeySystem.lua  LICENSE  Loader.lua  LunarHub.lua  LunarUI.lua  Lunar_Hub.lua  Lunar_Loader.lua  MOONSEC.md  MurderMystery2_Hub.lua  (+58 more)
ai_tutor/: __init__.py  __main__.py  brain.py  claude_client.py  fetcher.py  filesystem.py  generator.py  main.py  memory.py  tutor.py
api/: ai.js  animeballhub.js  audio.js  chat.js  claude-plan.js  generate.js  github.js  health.js  image.js  lua-file.js  lua-files.js  music.js  obfuscate-text.js  poll.js  ruby.js  video.js
capybara/: LICENSE  README.md  capybara.lua  cli.lua  emit.lua  layers.lua  lexer.lua  pack.lua  rng.lua  run_tests.lua
crystal/: LANGUAGE.md  analyzer.lua  compiler.lua  http.lua  init.lua  lexer.lua  obfuscator.lua  parser.lua  (+2 more)
volt-external/: CMakeLists.txt  README.md  VoltBridge.lua  build.bat
volt-external/src/: App.cpp  App.h  Bridge.cpp  Bridge.h  Renderer.cpp  Renderer.h  Store.cpp  Theme.h  UI.cpp  UI.h  main.cpp
(+335 files in other folders)
